--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-to-print": "^2.15.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.5.0",
     "eslint": "^8",
